--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="container bootstrap snippets bootdey" *ngIf="showScreen">
   <div class="tile tile-alt" id="messages-main">
-    <div class="ms-menu">
+    <div class="ms-menu" [class.toggled]="menuToggled">
       <div class="ms-user clearfix">
         <img [src]="currentUser?.image" alt="" class="img-avatar pull-left">
         <div>{{currentUser.name}} <br> m-hollaway&#64;gmail.com</div>
@@ -8,12 +8,12 @@
 
       <div class="p-15">
         <div class="dropdown">
-          <a class="btn btn-primary btn-block" href="" data-toggle="dropdown">Messages <i class="caret m-l-5"></i></a>
+          <a class="btn btn-primary btn-block" data-toggle="dropdown">Messages <i class="caret m-l-5"></i></a>
 
           <ul class="dropdown-menu dm-icon w-100">
-            <li><a href=""><i class="fa fa-envelope"></i> Messages</a></li>
-            <li><a href=""><i class="fa fa-users"></i> Contacts</a></li>
-            <li><a href=""><i class="fa fa-format-list-bulleted"> </i>Todo Lists</a></li>
+            <li><a ><i class="fa fa-envelope"></i> Messages</a></li>
+            <li><a ><i class="fa fa-users"></i> Contacts</a></li>
+            <li><a ><i class="fa fa-format-list-bulleted"> </i>Todo Lists</a></li>
           </ul>
         </div>
       </div>
@@ -48,9 +48,9 @@
 
     <div class="ms-body">
       <div class="action-header clearfix">
-        <!-- <div class="visible-xs" id="ms-menu-trigger">
+        <div class="visible-xs" (click)="toggleMenu()" id="ms-menu-trigger">
           <i class="fa fa-bars"></i>
-        </div> -->
+        </div>
 
         <div class="pull-left hidden-xs" *ngIf="selectedUser" >
           <img [src]="selectedUser?.image" alt="" class="img-avatar m-r-10">
