Dublicate message fixed but selected user is different then in localstorge message patching for 2 times

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,17 +11,17 @@
           <a class="btn btn-primary btn-block" data-toggle="dropdown">Messages <i class="caret m-l-5"></i></a>
 
           <ul class="dropdown-menu dm-icon w-100">
-            <li><a ><i class="fa fa-envelope"></i> Messages</a></li>
-            <li><a ><i class="fa fa-users"></i> Contacts</a></li>
-            <li><a ><i class="fa fa-format-list-bulleted"> </i>Todo Lists</a></li>
+            <li><a><i class="fa fa-envelope"></i> Messages</a></li>
+            <li><a><i class="fa fa-users"></i> Contacts</a></li>
+            <li><a><i class="fa fa-format-list-bulleted"> </i>Todo Lists</a></li>
           </ul>
         </div>
       </div>
 
       <div class="list-group lg-alt">
         <!-- {{selectedUser | json}} -->
-        <a class="list-group-item media" [ngClass]="user?.phone === selectedUser?.phone && 'active'" *ngFor="let user of userList"
-          (click)="selectUserHandler(user?.phone)">
+        <a class="list-group-item media" [ngClass]="user?.phone === selectedUser?.phone && 'active'"
+          *ngFor="let user of userList" (click)="selectUserHandler(user?.phone); toggleMenu()">
           <div class="pull-left">
             <img [src]="user.image" alt="" class="img-avatar">
           </div>
@@ -52,15 +52,20 @@
           <i class="fa fa-bars"></i>
         </div>
 
-        <div class="pull-left hidden-xs" *ngIf="selectedUser" >
+        <div class="pull-left hidden-xs" *ngIf="selectedUser">
           <img [src]="selectedUser?.image" alt="" class="img-avatar m-r-10">
           <div class="lv-avatar pull-left">
 
           </div>
           <span>{{selectedUser.name}}</span>
         </div>
-
+        <!-- {{dateTime | date: "hh:mm:ss dd:MM:yyyy"}} -->
         <ul class="ah-actions actions">
+          <li>
+            <span>{{version}}</span>
+            <!-- <a href="">
+            </a> -->
+          </li>
           <li>
             <a href="">
               <i class="fa fa-trash"></i>
@@ -106,21 +111,26 @@
           </li>
         </ul>
       </div>
-      <div class="msg-body">
-        {{messageArray | json}}
-        <div class="message-feed " *ngFor="let item of messageArray" [ngClass]="item?.user === currentUser?.name ? 'right' : 'media'">
-          <!-- <div class="pull-left">
+
+      <div class="chat-box" *ngIf="selectedUser">
+
+
+        <div class="msg-body" #msgBody>
+          {{messageArray | json}}
+          <div class="message-feed " *ngFor="let item of messageArray"
+            [ngClass]="item?.user === currentUser?.name ? 'right' : 'media'">
+            <!-- <div class="pull-left">
             <img src="https://bootdey.com/img/Content/avatar/avatar1.png" alt="" class="img-avatar">
           </div> -->
-          <div class="media-body">
-            <div class="mf-content">
-              {{item?.message}}
+            <div class="media-body">
+              <div class="mf-content">
+                {{item?.message}}
+              </div>
+              <small class="mf-date"><i class="fa fa-clock-o"></i> {{item.dateTime | date: "hh:mm:ss dd:MM:yyyy"}}</small>
             </div>
-            <small class="mf-date"><i class="fa fa-clock-o"></i> 20/02/2015 at 09:00</small>
           </div>
-        </div>
 
-        <!-- <div class="message-feed right">
+          <!-- <div class="message-feed right">
           <div class="pull-right">
             <img src="https://bootdey.com/img/Content/avatar/avatar2.png" alt="" class="img-avatar">
           </div>
@@ -134,16 +144,23 @@
         </div> -->
 
 
-      </div>
+        </div>
 
-      <div class="msb-reply">
-        <!-- <textarea placeholder="What's on your mind..."></textarea> -->
-        <input type="text" placeholder="Type a message" class="form-control" [(ngModel)]="messageText"
-        (keyup)="$event.keyCode === 13 && sendMessage()" />
-        <button (click)="sendMessage()"><i class="fa fa-paper-plane-o"></i></button>
+        <div class="msb-reply">
+          <!-- <textarea placeholder="What's on your mind..."></textarea> -->
+          <input type="text" placeholder="Type a message" class="form-control" [(ngModel)]="messageText"
+            (keyup)="$event.keyCode === 13 && sendMessage()" />
+          <button (click)="messageText !== '' ? sendMessage() : ''"><i class="fa fa-paper-plane-o"></i></button>
+        </div>
+
+      </div>
+      <div class="msg-body" *ngIf="!selectedUser ">
+        <div class="user-notSelected">
+          <span>Please select user to chat</span>
+        </div>
       </div>
     </div>
   </div>
 </div>
 
-<app-login [showScreen] = "showScreen" (valueEmitter)="valueRecievedOutput($event)"></app-login>
+<app-login [showScreen]="showScreen" (valueEmitter)="valueRecievedOutput($event)"></app-login>
