--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -352,6 +352,7 @@ body {
       }
     }
   }
+  
 
   .avatar {
     height: 50px;
@@ -359,4 +360,8 @@ body {
     border-radius: 50%;
     overflow: hidden;
     margin: 0 15px 0 0;
+  }
+
+  .title{
+    font-size:  xxx-large;
   }
