--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -115,9 +115,13 @@ body {
 .msb-reply {
   box-shadow: 0 -20px 20px -5px #fff;
   position: relative;
-  margin-top: 30px;
+  // margin-top: 30px;
   border-top: 1px solid #eee;
   background: #f8f8f8;
+  padding: 10px;
+  input{
+    border: none;
+  }
 }
 .four-zero, .lc-block {
   box-shadow: 0 1px 11px rgba(0, 0, 0, .27);
@@ -142,9 +146,9 @@ body {
   color: #2196f3;
   background: 0 0;
 }
-.msb-reply button:hover {
-  background: #f2f2f2;
-}
+// .msb-reply button:hover {
+//   background: #f2f2f2;
+// }
 .img-avatar {
   height: 37px;
   border-radius: 2px;
@@ -217,10 +221,34 @@ body {
   overflow-y: scroll;
   height: 80vh;
 }
+/* Adjust height for mobile screens */
+@media (max-width: 600px) {
+  .msg-body {
+    height: 70vh; /* Smaller height for mobile screens */
+  }
+}
 
 .active{
   background: #B3B3B3;
 }
 .pull-left{
   margin-left: 30px;
+}
+.user-notSelected {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 80vh; /* Full height to center vertically */
+  text-align: center;
+  font-size: 1.2em; /* Adjust font size if needed */
+  color: #868686;
+  font-weight: bold;
+}
+
+@media (max-width: 600px) {
+  .user-notSelected {
+    font-size: 1em; /* Smaller font size for mobile */
+    padding: 0 10px; /* Add padding for smaller screens */
+    height: 70vh; /* Full height to center vertically */
+  }
 }
