--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -365,3 +365,21 @@ body {
   .title{
     font-size:  xxx-large;
   }
+  // .profilePic{
+  //   img{
+  //     width: 40px;
+  //     padding: 5px;
+  //   }
+  // }
+  .profilePic img {
+    width: 40px;
+    /* height: 40px; */
+    margin: 3px;
+    cursor: pointer;
+    border: 2px solid transparent;
+    border-radius: 50%;
+  }
+  
+  .profilePic img.selected {
+    border-color: #007bff;
+  }
