--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -50,7 +50,7 @@
         <!-- <p class="modal-desc">Fanny pack hexagon food truck, street art waistcoat kitsch.</p> -->
         <div class="input-block">
           <label for="phone" class="input-label">User name</label>
-          <input type="text" name="username" id="username" placeholder="Enter your phone number" [(ngModel)]="userName" />
+          <input type="text" name="username" id="username" placeholder="Enter your user name" [(ngModel)]="userName" />
           <!-- <input type="phone" name="phone" id="phone" placeholder="Enter your phone number" /> -->
         </div>
         <div class="input-block">
