First time message send issue solve

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -58,6 +58,8 @@
           <span>{{selectedUser.name}}</span>
         </div>
         <!-- {{dateTime | date: "hh:mm:ss dd:MM:yyyy"}} -->
+
+        roomId: {{roomId}}
         <ul class="ah-actions actions">
           <li>
             <span>{{version}}</span>
