--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -65,7 +65,8 @@ body {
   }
 
   &-button {
-    color: darken(#8c7569, 5%);
+    // color: darken(#8c7569, 5%);
+    color: #fff;
     font-family: "Nunito", sans-serif;
     font-size: 18px;
     cursor: pointer;
@@ -73,7 +74,7 @@ body {
     outline: 0;
     padding: 10px 40px;
     border-radius: 30px;
-    background: rgb(255, 255, 255);
+    background: #fb7777;
     box-shadow: 0 10px 40px rgba(0, 0, 0, 0.16);
     transition: 0.3s;
     
@@ -152,13 +153,13 @@ body {
   border: 0;
   color: #fff;
   border-radius: 4px;
-  background: #8c7569;
+  background: #fb7777;
   font-family: "Nunito", sans-serif;
   transition: 0.3s;
   cursor: pointer;
 
   &:hover {
-    background: #55311c;
+    background: #f64a4a;
   }
 }
 
@@ -214,6 +215,9 @@ body {
   background: 0;
   padding: 0;
   cursor: pointer;
+  svg{
+    color: #fb7777;
+  }
 }
 
 .scroll-down {
