--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,5 +1,5 @@
 <!-- Login -->
-
+<app-loader *ngIf="loader"></app-loader>
 <div class="" *ngIf="!showScreen">
   <div class="scroll-down" *ngIf="!isOpened"><span class="title">Chat App<sup><i
           class="fa-regular fa-comment-dots"></i></sup> </span> <br><br> SCROLL DOWN
