--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -381,10 +381,10 @@ body {
     /* height: 40px; */
     margin: 1.7px;
     cursor: pointer;
-    border: 2px solid transparent;
+    border: 4px solid transparent;
     border-radius: 50%;
   }
   
   .profilePic img.selected {
-    border-color: #007bff;
+    border-color: #fb7777;
   }
