--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -487,6 +487,9 @@ img{
     margin-right: 15px;
     margin-top: 9px;
     text-align: center;
+    img{
+      border-radius: 20px;
+    }
   }
 }
 .logout{
